# web-demo

./: .env  Cargo.toml
config/: log4rs.yaml
public/static/js/: xcity.js
public/static/lib/layui/: layui.all.js
public/static/lib/layui/lay/modules/: carousel.js  element.js  form.js  layedit.js  table.js
script/ddl/: database.sql
src/: main.rs
src/config/: config.rs  mod.rs
src/constant/: enums.rs  mod.rs
src/controller/: mod.rs  user_controller.rs  verify_code_controller.rs
src/dao/: mod.rs
src/filters/: admin_roles_filter.rs  common_filter.rs  mod.rs
src/mid/: mod.rs
src/model/: mod.rs
src/model/domain/: admin_roles.rs  admins.rs  ads.rs  menus.rs  mod.rs  tm_user.rs  user_levels.rs  users.rs  video_categories.rs  video_replies.rs  video_tags.rs  videos.rs  watch_records.rs
src/model/dto/: mod.rs  req_page_dto.rs  user_dto.rs
src/model/vo/: mod.rs  resp_vo.rs  user_vo.rs
src/service/: admin_roles_service.rs  cache_service.rs  mod.rs  redis_service.rs  user_service.rs  verify_code_service.rs
src/util/: jwt_util.rs  verify_code.rs
src/utils/: jwt_util.rs  mod.rs  password_util.rs  rand_util.rs  verify_code_util.rs
