[package]
name = "web-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#serde
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0"

bson2 = "2.0"

chrono = { version = "0.4", features = ["serde"] }
#全局变量延迟初始化
lazy_static = "1.4.0"

#log
log = "0.4"
log4rs = "0.13.0"

#runtime
tokio = { version = "0.2", features = ["full"] }

#rbatis orm dep(实体类与数据库orm操作映射工具 类似mybatis)
rbatis-core = { version = "3.0"}
rbatis = { version = "3.0", default-features = false, features = ["mysql","runtime-async-std-rustls"] }

#web server
actix-web = "2.0"

actix-http = "1.0"

actix-rt = "1.0"
actix-web-httpauth = "0.4.2"

#redis
redis = "0.16.0"

#jwt
jsonwebtoken = "7"

#uuid
uuid = "0.8"
md5 = "0.7.0"

#validator(用于数据校验的,类似于java中的valid注解的功能)
#提供validtor核心功能
validator = "0.10"
#支持derive注解(装饰器类似)
validator_derive = "0.10"

#rand
rand = "0.7"

dotenv = "0.15.0"
config = "0.10.1"

ring = "0.16.20"

#lexical
lexical-core = "0.7.5"

tera = "1.0"

regex = "1.3"